--- a/3.html
+++ b/3.html
@@ -19,5 +19,26 @@ JavaScript는 C에서 영향을 받은 C-Family 언어로 기본적인 문법이
 자바스크립트에서도 함수형[3] 언어의 불편함과 호이스팅 등 여러문제를 무마하기위해서 클래스 개념의 도입과 변수선언을 let[4], const[5]로 하는등 다른언어 쓰는사람들한테 적응을 그나마 하도록 흉내는 내주는 척하는게 다행. 물론 일반적인 객제지향 프로그래밍 개발자에게는 이것마저 이해를 못 하고 Syntatic Sugar에 불과한 자바스크립트의 클래스를 불만족스러워한다.
 최근 자바스크립트 인터뷰에서 아직도 왜 호이스팅을 물어 보냐는 Dan Abramov의 트윗 https://twitter.com/dan_abramov/status/1362530955420987396 이 화제가 되었는데, 물론 현대 JS에서 호이스팅을 만날 일은 흔치 않지만 호이스팅이 어떤 문제를 풀려고 했으며 그 문제를 현대 JS에서는 어떻게 다루는지는 이해할 필요가 있다 본다.
 </p>
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://darknight-1.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html?
