--- a/1.html
+++ b/1.html
@@ -5,11 +5,11 @@
 <meta charset="utf-8">
 </head?
 <body>
-<h1><a href="index.html">WEB</h1>
+<h1><a href="index.html"><font color="red">WEB</font></a></h1>
 <ol>
-  <li><a href="1.html">HTML</li>
-  <li><a href="2.html">CSS</li>
-  <li><a href="3.html">JavaScript</li>
+  <li><a href="1.html"><font color="red">HTML</font></a></li>
+  <li><a href="2.html"><font color="red">CSS</font></a></li>
+  <li><a href="3.html"><font color="red">JavaScript</font></a></li>
 </ol>
 <h2>HTML</h2>
 <p>
